<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_testbed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.viromedia.viromedia.EnterTestbedActivity"
    android:clickable="true"
    android:focusableInTouchMode="true" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn_states"
            android:background="@null"
            android:layout_gravity="start"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
                <TextView
                    android:id="@+id/testbed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:text="@string/viro_media_application_testbed"/>
                <TextView
                    android:id="@+id/testbed_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/viro_media_testbed_steps"
                    android:layout_below="@id/testbed_title"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                <EditText
                    android:id="@+id/edit_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_testbed_message"
                    android:layout_below="@id/testbed_steps"
                    android:background="@drawable/edittext_roundedcorners"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true" />
                <ImageButton
                    android:id="@+id/go_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/go_btn_states"
                    android:background="@null"
                    android:layout_below="@id/edit_message"
                    android:layout_marginTop="8dp"
                    android:onClick="startTestBed"/>
                <TextView
                    android:id="@+id/release_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/release_notes"
                    android:layout_below="@id/go_button"
                    android:paddingTop="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal">
            <ImageButton
                android:id="@+id/clear_data_button"
                android:src="@drawable/clear_cache_btn_states"
                android:background="@null"
                android:layout_width="88dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:onClick="clearAppData"/>
            <TextView
                android:id="@+id/viro_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/viro_version"
                android:layout_below="@id/clear_data_button"
                android:paddingTop="10dp"/>
        </RelativeLayout>
</RelativeLayout>
